// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenes/Welcome Should render "afternoon" (Sun Jan 28 2018 13:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good afternoon
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "afternoon" (Sun Jan 28 2018 16:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good afternoon
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "afternoon" (Sun Jan 28 2018 17:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good afternoon
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "evening" (Sun Jan 28 2018 18:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good evening
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "evening" (Sun Jan 28 2018 21:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good evening
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "evening" (Sun Jan 28 2018 22:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good evening
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "morning" (Sun Jan 28 2018 04:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good morning
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "morning" (Sun Jan 28 2018 12:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good morning
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "night" (Sun Jan 28 2018 03:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good night
    , 
    John
  </div>
</div>
`;

exports[`scenes/Welcome Should render "night" (Sun Jan 28 2018 23:00:00 GMT+0100 (CET)) 1`] = `
<div
  className="sc-bdVaJa hevVxG"
>
  <div
    className="sc-bwzfXH eySVhi"
  >
    Good night
    , 
    John
  </div>
</div>
`;
